# NinjaCrawler-Temp

./: .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  README.md  accounts.html  batch-editor.html  connector-debug.html  connector-runtimes.html  eslint.config.js  import.html  index.html  package-lock.json  package.json  plans.html  profile-editor.html  profile-view.html  queue-status.html  release-please-companion-config.json  release-please-config.json  runtime-log.html  scheduler.html  vite.config.ts  workspace-health.html
src-tauri/: Cargo.toml  tauri.conf.json  tests.manifest
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0010_external_import_ledger.sql  0011_instagram_media_identity.sql  0026_instagram_media_post_code.sql  0027_deleted_media.sql  0028_instagram_highlight_membership.sql  0029_instagram_highlight_media_membership.sql  0031_instagram_identity_hint_backfill.sql  0033_instagram_identity_hint_reconcile.sql  0034_account_sync_media_ledger.sql  0035_account_sync_scope_state.sql  0036_provider_post_stats.sql  0037_source_sync_queue_job_keys.sql  0038_provider_sync_resume_cursor.sql  0039_provider_sync_resume_schema_repair.sql  0040_media_path_migration_queue.sql  0042_source_profile_stats.sql  0043_workspace_health_media_dedupe.sql  0044_workspace_health_media_dedupe_schema_repair.sql  0045_media_dedupe_incremental_vdf.sql  0046_media_dedupe_provider_scope.sql  0047_media_dedupe_performance.sql  0048_media_dedupe_source_scope.sql  0049_media_title_duration.sql
src-tauri/scripts/: win-test-runner.ps1
src-tauri/src/: lib.rs
src-tauri/src/application/: commands.rs
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: app_update.rs  atomic_file.rs  backup_crypto.rs  companion_api.rs  companion_install.rs  connector_debug.rs  connector_runtime.rs  database.rs  desktop_runtime.rs  instagram_connector.rs  media_dedupe_runtime.rs  media_dedupe_vdf.rs  media_metadata_probe.rs  media_path_migration_runtime.rs  media_thumbnail_runtime.rs  media_tool_runtime.rs  mod.rs  notification_runtime.rs  runtime_log.rs  single_video_runtime.rs  source_delete_runtime.rs  source_sync_runtime.rs  storage.rs  tiktok_connector.rs  tiktok_likes_runtime.rs  twitter_connector.rs  vsco_connector.rs  workspace_backup.rs  workspace_repository.rs  youtube_connector.rs
src-tauri/src/infrastructure/workspace_repository/: accounts.rs  avatar.rs  companion_account_import_tests.rs  gallery.rs  health.rs  import.rs  media.rs  media_dedupe.rs  mod.rs  options.rs  paths.rs  scheduler.rs  settings.rs  single_videos.rs  sources.rs  sync.rs  (+1 more)
src-tauri/src/providers/: registry.rs
(+191 files in other folders)
