[package]
name = "ninjacrawler"
version = "0.6.0" # x-release-please-version
description = "Local-first desktop crawler manager"
authors = ["MetalDevOps"]
edition = "2021"

[lib]
name = "ninjacrawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-opener = "2"
rfd = "0.15"
uuid = { version = "1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
roxmltree = "0.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10"
trash = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[dev-dependencies]
tempfile = "3"
