[package]
name = "ninjacrawler"
version = "0.24.1" # x-release-please-version
description = "Local-first desktop crawler manager"
authors = ["MetalDevOps"]
edition = "2021"
default-run = "ninjacrawler"

# Desktop-only: staticlib/cdylib são exigidos apenas pelos alvos móveis do
# Tauri e, no Windows, faziam o binário de cargo test linkar contra a cdylib
# (ninjacrawler_lib.dll) sem os símbolos internos — todo teste morria no loader
# com STATUS_ENTRYPOINT_NOT_FOUND antes de main.
[lib]
name = "ninjacrawler_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-opener = "2.5.4"
rfd = "0.15"
uuid = { version = "1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "gzip", "brotli", "deflate"] }
semver = "1"
roxmltree = "0.20"
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
sha2 = "0.10"
tempfile = "3"
trash = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
